:sparkles: implemented plugin, command specifier and specialCommand

--- a/Plugin_UnicodeCharacterLookup.csproj
+++ b/Plugin_UnicodeCharacterLookup.csproj
@@ -33,6 +33,10 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <TargetPath>settings.json</TargetPath>
     </ContentWithTargetPath>
+    <ContentWithTargetPath Include="UnicodeChars.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <TargetPath>UnicodeChars.json</TargetPath>
+    </ContentWithTargetPath>
   </ItemGroup>
 
   <ItemGroup>
